# geo-analisis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RFC-GeoAnalisis-Aplicacion.md  ageb_data.csv  app.spec  docker-compose.yml  entrypoint.sh  launcher.py  migrate_to_postgis.py  preprocess_ageb.py  pyproject.toml  requirements.txt  rfc-template.md
.github/workflows/: ci.yml
app/: db.py  main.py
app/clients/: besttime_client.py  denue_client.py  google_places_client.py  overture_client.py
app/models/: db_models.py  schemas.py
app/services/: ageb_reader.py  analysis_engine.py  chart_generator.py  data_service.py  environment_calculator.py  export_service.py  foot_traffic_service.py  llm_service.py  scian_catalog.py  target_market_service.py  zone_service.py
static/: index.html
static/css/: styles.css
static/js/: app.js  export.js  map.js
tests/: test_ageb_reader.py  test_analysis_engine.py  test_data_service.py  test_environment_calculator.py  test_llm_service.py  test_main.py  test_schemas.py  test_zone_service.py
